# neurons

./: .gitignore  CITATION.cff  Cargo.toml  README.md  README.txt  lines.sh  neurons.css
.github/workflows/: tests.yml
doc/: neurons.css  neurons.html
documentation/: comparison.py  neurons.css  neurons.html  timeweighted.py  timings.py
documentation/validation/: cifar10.py  deconvolution.py  mnist.py  test_convolution_backward.py  test_network_backward.py  test_network_learn.py  test_network_learn_bigger.py
examples/: benchmark.rs  compare.rs  convolution.rs  example_benchmark.rs  example_cifar10.rs  example_convolution.rs  example_feedback.rs  example_feedback_block.rs  example_iris.rs  example_iris_feedback.rs  example_mnist.rs  example_mnist_feedback.rs  example_mnist_looping.rs  example_mnist_skip.rs  example_network.rs  example_tensor.rs  example_train.rs  example_xor.rs  feedback.rs  iris.rs  network.rs  train.rs  xor.rs
examples/bike/: feedback.rs  looping.rs  plain.rs
examples/cifar10/: feedback.rs  looping.rs  plain.rs  skip.rs
examples/compare/: bike.rs  fashion-1.rs  fashion-2.rs  ftir-cnn.rs  ftir-mlp.rs  ftir.rs  iris.rs  mnist-fashion.rs  mnist.rs
examples/ftir/: plain.rs
examples/ftir/cnn/: feedback.rs  looping.rs  plain.rs  skip.rs
examples/ftir/mlp/: feedback.rs  looping.rs  plain.rs  skip.rs
examples/mnist/: deconvolution.rs  feedback.rs  looping.rs  plain.rs  skip.rs
examples/mnist-fashion/: feedback.rs  looping.rs  plain.rs  skip.rs
examples/timing/: bike.rs  ftir-cnn.rs  ftir-mlp.rs  iris.rs  mnist.rs
output/: compare.json
output/compare/: bike.json  fashion-1.json  fashion-2.json  ftir-cnn.json  ftir-cnn.txt  ftir-mlp-noclip.txt  ftir-mlp.json  ftir-mlp.txt  iris.json  iris.txt  mnist-fashion.json  mnist-fashion.txt  mnist.json
output/compare/probed/: bike-regression.tex  bike.csv  fashion-1-classification.tex  fashion-1.csv  ftir-cnn-classification.tex  ftir-cnn-regression.tex  ftir-cnn.csv  ftir-mlp-classification.tex  ftir-mlp-regression.tex  ftir-mlp.csv  iris-classification.tex  iris.csv  mnist-classification.tex  mnist.csv
output/timing/: bike.json  ftir-cnn.json  ftir-mlp.json  iris.json  mnist.json
output/timing/timetables/: bike-classification.tex  bike-regression.tex  ftir-cnn-classification.tex  ftir-cnn-regression.tex  ftir-mlp-classification.tex  ftir-mlp-regression.tex  iris-classification.tex  iris-regression.tex  mnist-classification.tex  mnist-regression.tex
src/: activation.rs  algebra.rs  convolution.rs  deconvolution.rs  dense.rs  feedback.rs  feedforward.rs  layer.rs  lib.rs  main.rs  maxpool.rs  network.rs  objective.rs  optimizer.rs  plot.rs  random.rs  recurrent.rs  storage.rs  tensor.rs
tests/: test_convolution.rs
validation/: test_network_update.py
