[package]
name = "neurons"
version = "2.3.0"
edition = "2021"
description = "Neural networks from scratch, in Rust."
authors = ["Hallvard Høyland Lavik"]
homepage = "https://github.com/hallvardnmbu/neurons"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/hallvardnmbu/neurons"
include = ["**/*.rs", "Cargo.toml", "documentation/neurons.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "documentation/neurons.html"]

[dependencies]
rayon = "1.10"
plotters = "0.3.6"

[[example]]
name = "example_network"
path = "examples/example_network.rs"

[[example]]
name = "example_feedback"
path = "examples/example_feedback.rs"

[[example]]
name = "example_xor"
path = "examples/example_xor.rs"

[[example]]
name = "example_iris"
path = "examples/example_iris.rs"

[[example]]
name = "example_benchmark"
path = "examples/example_benchmark.rs"

[[example]]
name = "example_convolution"
path = "examples/example_convolution.rs"

[[example]]
name = "example_mnist"
path = "examples/example_mnist.rs"

[[example]]
name = "example_mnist_skip"
path = "examples/example_mnist_skip.rs"

[[example]]
name = "example_mnist_looping"
path = "examples/example_mnist_looping.rs"

[[example]]
name = "example_cifar10"
path = "examples/example_cifar10.rs"
