[package]
name = "neurons"
version = "2.3.0"
edition = "2021"
description = "Neural networks from scratch, in Rust."
authors = ["Hallvard Høyland Lavik"]
homepage = "https://github.com/hallvardnmbu/neurons"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/hallvardnmbu/neurons"
include = ["**/*.rs", "Cargo.toml", "documentation/neurons.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "documentation/neurons.html"]

[dependencies]
rayon = "1.10"
plotters = "0.3.6"

[[example]]
name = "network"
path = "examples/network.rs"

[[example]]
name = "convolution"
path = "examples/convolution.rs"

[[example]]
name = "feedback"
path = "examples/feedback.rs"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "iris"
path = "examples/iris.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "mnist-plain"
path = "examples/mnist/plain.rs"

[[example]]
name = "mnist-skip"
path = "examples/mnist/skip.rs"

[[example]]
name = "mnist-looping"
path = "examples/mnist/looping.rs"

[[example]]
name = "mnist-feedback"
path = "examples/mnist/feedback.rs"

[[example]]
name = "cifar10-plain"
path = "examples/cifar10/plain.rs"

[[example]]
name = "cifar10-skip"
path = "examples/cifar10/skip.rs"

[[example]]
name = "cifar10-looping"
path = "examples/cifar10/looping.rs"
