[package]
name = "neurons"
version = "2.5.3"
edition = "2021"
description = "Neural networks from scratch, in Rust."
authors = ["Hallvard Høyland Lavik"]
homepage = "https://github.com/hallvardnmbu/neurons"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/hallvardnmbu/neurons"
include = ["**/*.rs", "Cargo.toml", "documentation/neurons.html"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "documentation/neurons.html"]

[dependencies]
rayon = "1.10"
plotters = "0.3.6"

[[example]]
name = "network"
path = "examples/network.rs"

[[example]]
name = "convolution"
path = "examples/convolution.rs"

[[example]]
name = "feedback"
path = "examples/feedback.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "compare-iris"
path = "examples/compare/iris.rs"

[[example]]
name = "compare-ftir-mlp"
path = "examples/compare/ftir-mlp.rs"

[[example]]
name = "compare-ftir-cnn"
path = "examples/compare/ftir-cnn.rs"

[[example]]
name = "compare-mnist"
path = "examples/compare/mnist.rs"

[[example]]
name = "compare-fashion-1"
path = "examples/compare/fashion-1.rs"

[[example]]
name = "compare-fashion-2"
path = "examples/compare/fashion-2.rs"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "iris"
path = "examples/iris.rs"

[[example]]
name = "ftir-mlp-plain"
path = "examples/ftir/mlp/plain.rs"

[[example]]
name = "ftir-mlp-skip"
path = "examples/ftir/mlp/skip.rs"

[[example]]
name = "ftir-mlp-loop"
path = "examples/ftir/mlp/looping.rs"

[[example]]
name = "ftir-mlp-feedback"
path = "examples/ftir/mlp/feedback.rs"

[[example]]
name = "ftir-cnn-plain"
path = "examples/ftir/cnn/plain.rs"

[[example]]
name = "ftir-cnn-skip"
path = "examples/ftir/cnn/skip.rs"

[[example]]
name = "ftir-cnn-loop"
path = "examples/ftir/cnn/looping.rs"

[[example]]
name = "ftir-cnn-feedback"
path = "examples/ftir/cnn/feedback.rs"

[[example]]
name = "mnist-plain"
path = "examples/mnist/plain.rs"

[[example]]
name = "mnist-deconvolution"
path = "examples/mnist/deconvolution.rs"

[[example]]
name = "mnist-skip"
path = "examples/mnist/skip.rs"

[[example]]
name = "mnist-loop"
path = "examples/mnist/looping.rs"

[[example]]
name = "mnist-feedback"
path = "examples/mnist/feedback.rs"

[[example]]
name = "fashion-plain"
path = "examples/mnist-fashion/plain.rs"

[[example]]
name = "fashion-skip"
path = "examples/mnist-fashion/skip.rs"

[[example]]
name = "fashion-loop"
path = "examples/mnist-fashion/looping.rs"

[[example]]
name = "fashion-feedback"
path = "examples/mnist-fashion/feedback.rs"

[[example]]
name = "cifar10-plain"
path = "examples/cifar10/plain.rs"

[[example]]
name = "cifar10-loop"
path = "examples/cifar10/looping.rs"

[[example]]
name = "cifar10-feedback"
path = "examples/cifar10/feedback.rs"
